manifests/seraphim/prod/gitlab/NetworkPolicy-gitlab-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: gitlab
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: redis
    app.kubernetes.io/version: 7.2.4
    helm.sh/chart: redis-18.19.4
  name: gitlab-redis
  namespace: gitlab
spec:
  egress:
    - {}
  ingress:
    - ports:
        - port: 6379
    - ports:
        - port: 9121
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: gitlab
      app.kubernetes.io/name: redis
  policyTypes:
    - Ingress
    - Egress
